renderizar ordenamiento de cartas con el método

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,10 @@
         </div>
       </form>
 
-      <div class="row g-2" id="CardContainer"></div>
+      <div class="row g-2 mb-2" id="CardContainer"></div>
+      <div class="row g-2 p-3" id="orderCard">
+        <h5>Cartas ordenadas:</h5>
+      </div>
     </div>
   </body>
 </html>
